No more copy-pasted properties dictionary. Now using vostok.commons.collectios as source.

--- a/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
+++ b/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
@@ -62,4 +62,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\..\vostok.commons.collections\Vostok.Commons.Collections\ImmutableArrayDictionary.cs" Link="Commons\ImmutableArrayDictionary.cs" />
+  </ItemGroup>
+
 </Project>
