--- a/module.yaml
+++ b/module.yaml
@@ -11,6 +11,7 @@ notests *default:
   deps:
     - vostok.devtools
     - vostok.commons.collections/src
+    - vostok.commons.formatting/src
 
 full-build > notests:
   build:
