Now using PreciseDateTime for timestamp generation in LogExtensions. Suffered a moderate performance drop.

--- a/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
+++ b/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <Compile Include="..\..\vostok.commons.collections\Vostok.Commons.Collections\ImmutableArrayDictionary.cs" Link="Commons\ImmutableArrayDictionary.cs" />
+    <Compile Include="..\..\vostok.commons.time\Vostok.Commons.Time\PreciseDateTime.cs" Link="Commons\PreciseDateTime.cs" />
   </ItemGroup>
 
   <Import Project="..\..\vostok.commons.formatting\ObjectPropertiesExtractor.props" />
