Got rid of useless title for nuspec.

--- a/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
+++ b/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Title>Vostok logging abstractions library</Title>
+    <Title>Vostok.Logging.Abstractions</Title>
     <Description>A library with core logging interfaces, such as ILog and LogEvent.</Description>
   </PropertyGroup>
 
