--- a/Vostok.Logging.Abstractions.Tests/Vostok.Logging.Abstractions.Tests.csproj
+++ b/Vostok.Logging.Abstractions.Tests/Vostok.Logging.Abstractions.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.1" />
     <PackageReference Include="FluentAssertions" Version="5.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
