--- a/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
+++ b/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
@@ -42,5 +42,5 @@
     <Compile Include="..\..\vostok.commons.formatting\Vostok.Commons.Formatting\ToStringDetector.cs" Link="Commons\ToStringDetector.cs" />
     <Compile Include="..\..\vostok.commons.time\Vostok.Commons.Time\PreciseDateTime.cs" Link="Commons\PreciseDateTime.cs" />
   </ItemGroup>
-  <Import Project="..\..\vostok.commons.formatting\ObjectPropertiesExtractor.props" />
+  <Import Project="..\..\vostok.commons.formatting\ObjectPropertiesExtractor.props" Condition="Exists('..\..\vostok.commons.formatting\ObjectPropertiesExtractor.props')" />
 </Project>
