--- a/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
+++ b/Vostok.Logging.Abstractions/Vostok.Logging.Abstractions.csproj
@@ -23,36 +23,30 @@
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Update="Extensions\LogExtensions.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>LogExtensions.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Extensions\LogExtensions_Interpolated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>LogExtensions_Interpolated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Extensions\LogExtensions_Interpolated.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>LogExtensions_Interpolated.tt</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
+    <None Update="Extensions\LogExtensions.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>LogExtensions.cs</LastGenOutput>
+    </None>
     <None Update="Extensions\LogExtensions_Interpolated.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>LogExtensions_Interpolated.cs</LastGenOutput>
     </None>
-    <None Update="Extensions\LogExtensions_Interpolated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>LogExtensions_Interpolated.tt</LastGenOutput>
-    </None>    
   </ItemGroup>
+
   <ItemGroup>
     <Compile Include="..\..\vostok.commons.collections\Vostok.Commons.Collections\ImmutableArrayDictionary.cs" Link="Commons\ImmutableArrayDictionary.cs" />
     <Compile Include="..\..\vostok.commons.formatting\Vostok.Commons.Formatting\ToStringDetector.cs" Link="Commons\ToStringDetector.cs" />
     <Compile Include="..\..\vostok.commons.time\Vostok.Commons.Time\PreciseDateTime.cs" Link="Commons\PreciseDateTime.cs" />
+    <Compile Update="Extensions\LogExtensions.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LogExtensions.tt</DependentUpon>
+    </Compile>
+    <Compile Update="Extensions\LogExtensions_Interpolated.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LogExtensions_Interpolated.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="..\..\vostok.commons.formatting\ObjectPropertiesExtractor.props" Condition="Exists('..\..\vostok.commons.formatting\ObjectPropertiesExtractor.props')" />
 </Project>
