--- a/module.yaml
+++ b/module.yaml
@@ -16,6 +16,8 @@ notests *default:
 
 full-build > notests:
   deps:
+    - vostok.logging.formatting
+    - vostok.logging.abstractions
     - -vostok.devtools
     - vostok.devtools@with-net6.0
 
